# Final_Project

./: FinalProject.pth  Final_Project.ipynb  TSD Foundation Reaction Export.xlsx  TSD Steel Frame Example.xlsx  app.py  df_data_mod.csv  functions.py  pyproject.toml  renamed_df.csv  renamed_df_400.csv  requirements.txt
src/FinalProject_flit/: __init__.py
