[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "FinalProject_flit"
authors = []
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "openpyxl",
    "pandas",
    "matplotlib",
    "plotly",
    "nbformat",
    "ipywidgets",
    "IPython"
    
]

[project.urls]
Home = "https://github.com/mo7amed42/Final_Project"